# uriparse-rs

./: Cargo.toml  README.md  RELEASES.md
benches/: parse.rs
examples/: cli.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: uri_reference.rs
src/: authority.rs  fragment.rs  lib.rs  path.rs  query.rs  relative_reference.rs  scheme.rs  smol_str_cow.rs  uri.rs  uri_reference.rs  utility.rs
