[package]
authors = ["Scott Godwin <sgodwincs@gmail.com>"]
categories = ["parsing"]
description = "A URI parser including relative references"
edition = "2018"
homepage = "https://github.com/sgodwincs/uriparse-rs"
license = "MIT"
name = "uriparse"
readme = "README.md"
repository = "https://github.com/sgodwincs/uriparse-rs"
version = "0.6.4"

[[bench]]
harness = false
name = "parse"

[features]
default = []

[dependencies]
fnv = "1.0.7"
lazy_static = "1.4.0"
serde = { version = "1.0.115", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.2.10"
serde_json = "1.0.57"
